<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/backgroundColor"

    android:padding="16dp"

    android:orientation="vertical"

    tools:context=".Screens.FormScreen" >

    <!-- Botão de Voltar -->
    <ImageButton android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"

        android:src="@drawable/img_backbutton"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="12dp"

        android:orientation="vertical">

        <!-- Título da página -->
        <TextView android:id="@+id/formTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"

            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/textColor"
            android:text="@string/str_reviewTitle" />

        <!-- Etiqueta do Nome -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="start"
            android:layout_marginBottom="12dp"

            android:textSize="20sp"
            android:text="@string/str_name"
            android:fontFamily="@font/poppins"
            android:textColor="@color/textColor" />

        <EditText android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="12dp"

            android:background="@drawable/edit_background"

            android:hint="@string/str_nameInput"

            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/backgroundColor"
            android:textColorHint="@color/secondaryColor" />

        <!-- Etiqueta do Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="start"
            android:layout_marginVertical="12dp"

            android:textSize="20sp"
            android:text="@string/str_email"
            android:fontFamily="@font/poppins"
            android:textColor="@color/textColor" />

        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="12dp"

            android:background="@drawable/edit_background"

            android:hint="@string/str_emailInput"

            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/backgroundColor"
            android:textColorHint="@color/secondaryColor" />

        <!-- Etiqueta do Comentário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="start"
            android:layout_marginVertical="12dp"

            android:textSize="20sp"
            android:text="@string/str_comment"
            android:fontFamily="@font/poppins"
            android:textColor="@color/textColor" />

        <EditText android:id="@+id/input_comment"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:padding="12dp"

            android:inputType="textMultiLine"

            android:background="@drawable/edit_background"

            android:hint="@string/str_commentInput"

            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/backgroundColor"
            android:textColorHint="@color/secondaryColor" />

        <!-- Seção de Avaliação -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:layout_marginTop="16dp"

            android:padding="12dp"

            android:background="@drawable/rounded_table" >

            <TextView android:id="@+id/starInput"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:textSize="18sp"
                android:fontFamily="@font/poppins"
                android:text="@string/str_reviewInput"
                android:textColor="@color/secondaryColor" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"

                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_table" >

                <ImageButton android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"

                    android:src="@drawable/img_starinactive" />

                <ImageButton android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"

                    android:src="@drawable/img_starinactive" />

                <ImageButton android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"

                    android:src="@drawable/img_starinactive" />

                <ImageButton android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"

                    android:src="@drawable/img_starinactive" />

                <ImageButton android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"

                    android:src="@drawable/img_starinactive" />
            </LinearLayout>
        </LinearLayout>

        <!-- Botão de Envio -->
        <Button android:id="@+id/btn_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:text="@string/str_form"
            android:textColor="@color/backgroundColor"

            android:backgroundTint="@color/buttonColor"

            android:layout_marginTop="24dp"/>
    </LinearLayout>

</LinearLayout>
