<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/main"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:fitsSystemWindows="true"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"

    android:background="@color/backgroundColor">

    <TextView android:id="@+id/appTitle"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageSection"

        android:textSize="48sp"
        android:text="@string/app_name"
        android:fontFamily="@font/poppins"
        android:textColor="@color/textColor"
        />

    <!-- Seção da Imagem -->
    <LinearLayout
        android:id="@+id/imageSection"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        app:layout_constraintBottom_toTopOf="buttonSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"

        android:background="@color/primaryColor"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/img_homepage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"

            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/str_homeSubtitle"
            android:textColor="@color/backgroundColor" />
    </LinearLayout>

    <!-- Seção dos Botões -->
    <LinearLayout android:id="@+id/buttonSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:padding="16dp">

        <Button android:id="@+id/btn_news"
            android:layout_width="392dp"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:text="@string/str_news"
            android:fontFamily="@font/poppins"

            android:backgroundTint="@color/buttonColor" />

        <Button android:id="@+id/btn_forecast"
            android:layout_width="392dp"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:text="@string/str_forecast"

            android:backgroundTint="@color/buttonColor"

            android:layout_marginTop="24dp"/>

        <Button android:id="@+id/btn_f"
            android:layout_width="392dp"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:text="@string/str_form"

            android:backgroundTint="@color/buttonColor"

            android:layout_marginTop="24dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>